--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2 
       - name: Set up Docker Buildx
+        script: cd api_yamdb
         uses: docker/setup-buildx-action@v1 
       - name: Login to Docker 
         uses: docker/login-action@v1 
@@ -42,4 +43,4 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: otrstudy/infra-actions:lates
+          tags: otrstudy/web:latest
