--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2 
       - name: Set up Docker Buildx
-        script: cd api_yamdb
+        run: cd api_yamdb
         uses: docker/setup-buildx-action@v1 
       - name: Login to Docker 
         uses: docker/login-action@v1 
