--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -31,8 +31,9 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2 
-      - name: Set up Docker Buildx
+      - name: Change directory   
         run: cd api_yamdb
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1 
       - name: Login to Docker 
         uses: docker/login-action@v1 
