--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/checkout@v2 
       - name: Change directory   
         run: cd api_yamdb
+        run: ls
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1 
       - name: Login to Docker 
