--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -32,8 +32,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2 
       - name: Change directory   
-        run: cd api_yamdb
-        run: ls
+        run: |
+          cd api_yamdb
+          ls
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1 
       - name: Login to Docker 
