--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -32,11 +32,11 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2 
       - name: Change directory   
-        run: |
-          cd api_yamdb
-          ls
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1 
+        with:
+          context: api_yamdb/
+          file: api_yamdb/Dockerfile
       - name: Login to Docker 
         uses: docker/login-action@v1 
         with:
