--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -44,3 +44,21 @@ jobs:
           push: true
           tags: otrstudy/web:latest
           context: api_yamdb/
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
+          script: |
+            ls
+            sudo docker compose up -d
+            docker-compose exec web python manage.py migrate
+            docker-compose exec web python manage.py collectstatic --no-input
+
