--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -52,6 +52,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_DB_ENGINE: ${{ secrets.DB_ENGINE }}
+          envkey_DB_NAME: ${{ secrets.DB_NAME }}
+          envkey_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          envkey_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          envkey_DB_HOST: ${{ secrets.DB_HOST }}
+          envkey_DB_PORT: ${{ secrets.DB_PORT }}
+
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -63,13 +73,13 @@ jobs:
             sudo docker compose stop
             sudo docker compose rm web --force
             sudo docker rmi otrstudy/web --force 2>/dev/null
-            touch .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            # touch .env
+            # techo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            # techo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            # techo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            # techo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            # techo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            # techo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker compose up -d
             sudo docker compose exec web python manage.py migrate
             sudo docker compose exec web python manage.py collectstatic --no-input
