--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    image: otrstudy/web:latest
+    image: otrstudy/web:version_for_test
     restart: always
     volumes:
       - static_value:/app/static/
