--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -45,7 +45,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: otrstudy/web:latest
+          tags: otrstudy/web:version_for_test
           context: api_yamdb/
 
   deploy:
@@ -73,13 +73,6 @@ jobs:
             sudo docker compose stop
             sudo docker compose rm web --force
             sudo docker rmi otrstudy/web --force 2>/dev/null
-            # touch .env
-            # techo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            # techo DB_NAME=${{ secrets.DB_NAME }} >> .env
-            # techo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-            # techo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            # techo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            # techo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker compose up -d
             sudo docker compose exec web python manage.py migrate
             sudo docker compose exec web python manage.py collectstatic --no-input
